feat: subdomain based user creation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@controllers/*": ["./src/controllers/*"],
       "@database/*": ["./src/database/*"],
       "@middlewares/*": ["./src/middlewares/*"],
-      "@types/*": ["./src/types/*"]
+      "@types/*": ["./src/types/*"],
+      "@validators/*": ["./src/validators/*"]
     }
   }
 }
