--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
@@ -27,5 +28,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0"
-  }
+  },
+  "typeRoots": [
+    "./node_module/@types",
+    "./src/types"
+  ]
 }
